<resources>
    <string name="app_name">dsnp-wallet-kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeFragment">Home</string>
    <string name="profileFragment">Profile</string>
    <string name="keysFragment">Keys</string>
    <string name="logo">Logo</string>
    <string name="smart_id">Smart ID</string>
    <string name="name">Name</string>
    <string name="token">dslakfdjasl23</string>
    <string name="content_block">Content Block</string>
    <string name="profile">Profile</string>
    <string name="permission_label">Permissions</string>
    <string name="permission1">MeWe</string>
    <string name="save">Save</string>
    <string name="connect_device">Connect Device</string>
    <string name="my_keys_label">My Keys</string>
    <string name="root_key_label">Root Key</string>
    <string name="root_key_placeholder">0x54…987498</string>
    <string name="backup">Backup</string>
    <string name="connect_device_label">Connect Device</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="backup_label_label">backup_label</string>
    <string name="backup_label">Backup</string>
    <string name="view_seed_phrase">View my Seed Phrase</string>
    <string name="info">Backing up your keys is very important dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum</string>
    <string name="google_drive">Google Drive</string>
    <string name="email">Email</string>
    <string name="save_to_device">Save to Device</string>

    <string name="landing_title">It’s Your identity.\nYou should own it</string>
    <string name="landing_sub_title">Amplica Access is leading the migration to the Social Web so you can take control of your data. You can even take your digital identity with you.</string>
    <string name="landing_let_started_label">Let’s get started</string>
    <string name="landing_create_identity_btn">Create Identity</string>
    <string name="landing_have_identity">I have an ID</string>
    <string name="landing_restore_from_backup"><u>Restore from Backup</u></string>
    <string name="landing_privacy_policy">By signing up, you agree our <font color="#DA5E3A">Terms</font> and \n<font color="#DA5E3A">Privacy Policy</font></string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="signing_up_terms">By signing up, you agree our Terms and Privacy Policy</string>
    <string name="restore_account">Restore Account</string>

    <string name="lookup_title">Welcome to Sage</string>
    <string name="lookup_sub_title">"A little bit about what the wallet is and does etc. A little bit about what the wallet is "</string>
    <string name="lookup_label">We’ll look up you account</string>
    <string name="lookup_email_btn">Email</string>
    <string name="lookup_phone_btn">Phone</string>
    <string name="hint_email">name@gmail.com</string>
    <string name="lookup_send_auth_code">Send Auth Code</string>
    <string name="lookup_create_new_id">Create New ID</string>
    <string name="lookup_try_again">Try Again</string>
    <string name="enter_email">Enter email</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_phone">Enter phone no</string>
    <string name="lookup_temp_error">Your ID was not found</string>
    <string name="enter_code">Please enter the code sent to</string>
    <string name="temp_email">tester@gmail.com</string>
    <string name="invalid_code">Invalid code, please try again</string>
    <string name="temp_verify_success">Verify success</string>
    <string name="common_cannot_open_link">Cannot open this link</string>
    <string name="terms_link">https://www.amplicaaccess.com/access_web/terms.html</string>
    <string name="privacy_policy_link">https://www.amplicaaccess.com/access_web/privacy.html</string>
    <string name="landing_test_screen">Test Screen</string>
    <string name="have_id_link">https://www.amplicaaccess.com/</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="settings_title">You have NEVER backed up!</string>
    <string name="settings_subtitle">Recovery phrase is very important you better write this down</string>
    <string name="settings_recovery_phrase">Reveal Recovery Phrase</string>
    <string name="settings">Settings</string>

    <string name="social_identity_complete">% Social Identity Complete</string>
    <string name="see_all">See All</string>
    <string name="create_id_steps">%s of %s</string>
    <string name="create_digital_identity">Create Digital Identity</string>
    <string name="your_unique_handle">Your unique handle is how others will find you across the social web and will be universal across apps.</string>
    <string name="claim_your_handle">Claim your handle</string>
    <string name="handle_rules">Handle must be between 4–16 characters &amp; can only consist of letters, numbers, and underscores.</string>
    <string name="next">Next</string>
    <string name="confirm_your_handle">Confirm your Handle</string>
    <string name="numerical_suffix_auto_assigned">The numerical suffix is auto-assigned by Amplica Access to make sure every handle is unique. They will not be visible in some cases.</string>
    <string name="agree_to_terms">Agree to Terms</string>
    <string name="agree">Agree</string>
    <string name="by_agreeing">By agreeing, you grant Amplica Pro:</string>
    <string name="update_your_handle_and_profile_information">Update your handle and profile information</string>
    <string name="update_your_contacts_groups">Update your contacts &amp; groups</string>
    <string name="you_may_update_permissions_at_any_time">You may update permissions at any time.</string>
    <string name="set_avatar">Set Avatar</string>
    <string name="backup_seed_phrase">Backup Seed Phrase</string>
    <string name="choose_a_handle">Choose a handle</string>
    <string name="social_identity">Social Identity</string>
    <string name="your_real_name">In today\'s rapidly evolving world, your real name is more than a name - it\'s your true identity, your brand, your calling card and your livelihood. By completing the steps it’ll be good for you…</string>
    <string name="to_do">To Do</string>
    <string name="you_have_never_backed_up">You have NEVER backed up!</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="reveal_recovery_phrase">Reveal Recovery Phrase</string>

    <string name="security">Security</string>
    <string name="security_desc">Adding additional security is really important</string>
    <string name="face_id">Face ID</string>
    <string name="face_id_desc">Increase access security with Face ID</string>
    <string name="password">Password</string>
    <string name="password_desc">Password to log in to your account</string>
    <string name="security_is_important">Security is Important</string>
    <string name="back_up_your_recovery_phrase">Back up your recovery phrase now to ensure that your assets will be stores safely and securely</string>
    <string name="there_will_be_a_test">There will be a test</string>
    <string name="please_carefully_write">Please carefully write down these 12 words below in numerical order (1–12) and store your secret phrase securely.\n\nYou will confirm them in order on the next screen.</string>
    <string name="please_carefully_write_link_text">in order</string>
    <string name="i_ve_written_it_down">I\'ve written it down</string>
    <string name="recovery_phrase_is_very_important">Recovery phrase is very important you better write this down</string>
    <string name="this_is_the_test">This is the test</string>
    <string name="tap_the_words">Tap the words in numerical order (1–12) to verify your recovery phrase</string>
    <string name="continue_text">Continue</string>
    <string name="verify_recovery">Verify Recovery</string>
    <string name="you_got_it_wrong">You got it wrong!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="let_s_go">Let\'s Go!</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="import_hint">race boat delve king cousin field sunny best loony wild running</string>
    <string name="enter_your_12_word_recovery_phrase">Enter your 12 word recovery phrase to connect your account</string>
    <string name="connect">Connect</string>
    <string name="import_account">Import Account</string>
    <string name="try_again">Try Again</string>
    <string name="create_identity">Create Identity</string>
    <string name="invalid_phrase">When you encounter an \"Invalid menemonic phrase\" Error, you need to check the following:\n\nThe words are separated by a single space.\nThe words should be in the correct order.\nThe words are spelled correctly.</string>
    <string name="cancel">Cancel</string>
    <string name="logout_dialog_desc">This action will result in deleting all accounts from this device. Make sure you have backed up your recovery phrase before proceeding otherwise you won’t be able to restore your wallet.</string>
    <string name="view_recovery_phrase">View recovery phrase</string>
    <string name="agree_terms_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.\n\n                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum\n                \n                orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.\n\n                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum\n\n                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="agree_to_terms_of_use">Agree to Terms of Use</string>
    <string name="by_clicking_the_agree_button_you_agree">By clicking the agree button you agree</string>

</resources>