<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_nsv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">

        <TextView
            android:id="@+id/backup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/backup_label"
            android:textColor="@color/title_text"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_drive"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="14dp"
            android:text="@string/google_drive"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toEndOf="@+id/backup_label"
            app:layout_constraintStart_toStartOf="@+id/backup_label"
            app:layout_constraintTop_toBottomOf="@+id/backup_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="14dp"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toEndOf="@+id/backup_label"
            app:layout_constraintStart_toStartOf="@+id/backup_label"
            app:layout_constraintTop_toBottomOf="@+id/google_drive" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_to_device"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="14dp"
            android:text="@string/save_to_device"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toEndOf="@+id/backup_label"
            app:layout_constraintStart_toStartOf="@+id/backup_label"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/view_seed_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/view_seed_phrase"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/backup_label"
            app:layout_constraintStart_toStartOf="@+id/backup_label"
            app:layout_constraintTop_toBottomOf="@+id/save_to_device" />

        <TextView
            android:id="@+id/view_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="19dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5dp"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_seed_phrase" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>