<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/seedPhraseFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.home.HomeFragment"
        android:label="@string/homeFragment"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.profile.ProfileFragment"
        android:label="@string/profileFragment"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/keysFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.keys.KeysFragment"
        android:label="@string/keysFragment"
        tools:layout="@layout/fragment_keys" />
    <fragment
        android:id="@+id/landingFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.onboarding.LandingFragment"
        android:label="fragment_landing"
        tools:layout="@layout/fragment_landing" >
        <action
            android:id="@+id/action_landingFragment_to_lookupFragment"
            app:destination="@id/lookupFragment" />
    </fragment>
    <fragment
        android:id="@+id/lookupFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.onboarding.LookupFragment"
        android:label="fragment_lookup"
        tools:layout="@layout/fragment_lookup" />
    <fragment
        android:id="@+id/seedPhraseFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.onboarding.seedphrase.SeedPhraseFragment"
        android:label="fragment_seed_phrase"
        tools:layout="@layout/fragment_seed_phrase" />


</navigation>