<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="28dp"
        android:src="@drawable/back_icon"
        android:contentDescription="@string/common_ok_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/settings"
        android:textColor="@color/text_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="left"
        android:text="@string/settings_title"
        android:textColor="@color/text_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="left"
        android:lineSpacingExtra="2sp"
        android:text="@string/settings_subtitle"
        android:textColor="@color/text_white"
        android:textSize="12sp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <com.unfinished.common.view.PrimaryButton
        style="@style/Widget.Nova.Button.Primary"
        android:id="@+id/settings_recovery_phrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_recovery_phrase"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title" />

</androidx.constraintlayout.widget.ConstraintLayout>