<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <include app:graph="@navigation/mnemonic_nav_graph" />
    <include app:graph="@navigation/handle_nav_graph" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.home.HomeFragment"
        android:label="@string/homeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.profile.ProfileFragment"
        android:label="@string/profileFragment"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/keysFragment"
        android:name="com.unfinished.dsnp_wallet_kotlin.ui.keys.KeysFragment"
        android:label="@string/keysFragment"
        tools:layout="@layout/fragment_keys" />

    <fragment
        android:id="@+id/pincodeFragment"
        android:name="com.unfinished.feature_account.presentation.pincode.PincodeFragment"
        android:label="fragment_pincode"
        tools:layout="@layout/fragment_pincode" />

    <action
        android:id="@+id/action_return_to_wallet"
        app:destination="@id/landingFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:launchSingleTop="true"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/landingFragment" />

    <action
        android:id="@+id/action_open_main"
        app:destination="@id/homeFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/splashFragment"
        app:popUpToInclusive="true" />

</navigation>