<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_nsv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="33dp">

        <TextView
            android:id="@+id/my_keys_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="12dp"
            android:text="@string/my_keys_label"
            android:textColor="@color/title_text"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/root_key_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/root_key_label"
            android:textColor="@color/white"
            android:textSize="9dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/my_keys_label"
            app:layout_constraintTop_toBottomOf="@+id/my_keys_label" />

        <TextView
            android:id="@+id/root_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/root_key_placeholder"
            android:textColor="@color/white"
            android:layout_marginEnd="29dp"
            android:textSize="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/root_key_label"
            app:layout_constraintEnd_toStartOf="@+id/backup"
            app:layout_constraintTop_toTopOf="@+id/root_key_label" />

        <io.novafoundation.nova.common.view.PrimaryButton
            style="@style/Widget.Nova.Button.Primary"
            android:id="@+id/backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:layout_marginEnd="23dp"
            android:text="@string/backup"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/root_key_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/root_key_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/keys_recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/backup"
            app:layout_constraintStart_toStartOf="@+id/root_key_label"
            app:layout_constraintTop_toBottomOf="@+id/backup"
            tools:itemCount="3"
            tools:listitem="@layout/keys_item_layout" />

        <io.novafoundation.nova.common.view.PrimaryButton
            style="@style/Widget.Nova.Button.Primary"
            android:id="@+id/connect_device"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:layout_marginTop="70dp"
            android:text="@string/connect_device"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keys_recyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>