<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_nsv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="76dp">

        <TextView
            android:id="@+id/connect_device_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/connect_device_label"
            android:textColor="@color/title_text"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/qr_code_iv"
            android:layout_width="171dp"
            android:layout_height="176dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/qr_code_temp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connect_device_label"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize3Percent" />

        <TextView
            android:id="@+id/root_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/root_key_placeholder"
            android:textColor="@color/white"
            android:textSize="9dp"
            app:layout_constraintEnd_toEndOf="@+id/qr_code_iv"
            app:layout_constraintStart_toStartOf="@+id/qr_code_iv"
            app:layout_constraintTop_toBottomOf="@+id/qr_code_iv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="14dp"
            android:layout_marginStart="5dp"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="3dp"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/root_key" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="14dp"
            android:layout_marginEnd="5dp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/root_key" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>